# guild-toolkit

./: .gitignore  CHANGELOG.md  Cargo.toml
.crosslink/: .last-hydrated-ref  .promoted-uuids  promotion-log.json
.crosslink/.external-cache/3f837c5f1e397a37/: meta.json
.crosslink/.external-cache/3f837c5f1e397a37/bare.git/: FETCH_HEAD  index  shallow
.crosslink/.external-cache/3f837c5f1e397a37/hub/issues/b517f175-a445-494d-8919-c2cf02ac5aa3/: issue.json
.crosslink/.external-cache/3f837c5f1e397a37/hub/issues/b517f175-a445-494d-8919-c2cf02ac5aa3/comments/: 41e0fa2e-6315-453c-ad79-5e12dc275ef8.json  bcd6ebfd-85fa-48b1-879b-3d059a70268f.json
.crosslink/.external-cache/3f837c5f1e397a37/hub/issues/b5f1b075-038c-4108-9eba-45571e3b33b7/: issue.json
.crosslink/.external-cache/3f837c5f1e397a37/hub/issues/b5f1b075-038c-4108-9eba-45571e3b33b7/comments/: 35a5ce21-fe74-49ea-b5cf-f2cb76209278.json  3996c20a-f45b-4673-8e77-6c0bcc89d1a6.json  42c7bf76-724b-408f-8283-73a18801f70b.json  902304c4-0d26-4608-8bcf-d29269cdf7da.json  d459c47f-a558-45b1-a8c9-1faf1605b561.json
.crosslink/.external-cache/3f837c5f1e397a37/hub/issues/bb5f5438-a27c-4b01-8c3f-fe932ccaa355/: issue.json
.crosslink/.external-cache/3f837c5f1e397a37/hub/issues/bb5f5438-a27c-4b01-8c3f-fe932ccaa355/comments/: 4b818532-4160-483e-a3a1-c13565b7d394.json  bf5ee065-19f7-4ae6-9cf4-99f1fd18731e.json
.crosslink/.external-cache/3f837c5f1e397a37/hub/issues/c1b24acc-6c76-4317-9d4f-9e5c167a0fc8/: issue.json
crates/guild-core/: Cargo.toml
crates/guild-core/src/: config.rs  crosslink.rs  data.rs  error.rs  lib.rs
crates/guild-portfolio/: Cargo.toml
crates/guild-portfolio/src/: main.rs
(+2 files in other folders)
