[package]
name = "guild-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Shared library for the Guild CLI toolkit — config, data model, error types, output helpers"

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
colored = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
