[package]
name = "guild-portfolio"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Generate a portfolio site from your project repos"

[[bin]]
name = "guild-portfolio"
path = "src/main.rs"

[dependencies]
guild-core = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
pulldown-cmark = "0.13.4"

[dev-dependencies]
tempfile = { workspace = true }
